Ticket #1653 (closed defect: fixed)

Opened 2 months ago

Last modified 2 months ago

Qt4: crashes when usign Ctrl+Q from fullscreen

Reported by: courmisch Assigned to: courmisch
Priority: normal Milestone: 0.9.0-test2
Component: Qt interface Version: master
Severity: normal Keywords:
Cc: Platform(s): Win32+Linux
Difficulty: unknown Work status: Not started

Description

When using the embedded video in full screen, mode Ctrl+Q crashes:

[00000359] main interface debug: removing module "qt4"
[00000357] main interface debug: thread ended
[00000357] main interface debug: thread 3020942224 joined (../../src/interface/interface.c:170)
[00000357] main interface debug: removing module "signals"
[00000355] main interface debug: thread ended
[00000355] main interface debug: thread 3039107984 joined (../../src/interface/interface.c:170)
[00000355] main interface debug: removing module "screensaver"
[00000353] main interface debug: thread ended
[00000353] main interface debug: thread 3047500688 joined (../../src/interface/interface.c:170)
[00000353] main interface debug: removing module "hotkeys"
[00000001] main libvlc debug: removing all services discovery tasks
[00000001] main libvlc debug: removing playlist
[00000001] main libvlc warning: object 327 destroyed while thread alive (VLC might crash)
Segmentation fault

This does not happen with other interfaces. I suspect a FS controller cleanup bug.

Change History

07/01/08 20:09:30 changed by courmisch

  • milestone changed from 0.9.0 bugs to 0.9.0-test2.

07/02/08 20:26:53 changed by courmisch

  • status changed from new to assigned.
  • owner changed from jb to courmisch.

07/02/08 20:27:19 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.