Remove hacking fullscreen control invocation - fixes #1653